# Ekumen-Challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Documentation.md  README.md  USAGE.md
challenges/: CMakeLists.txt
challenges/1_cpp_creating_a_stack/: koan.cpp
challenges/2_python_rle_encoder/: koan.py
challenges/3_cpp_understanding_lambdas/: koan.cpp
challenges/4_python_flood_fill/: CMakeLists.txt  koan.py
challenges/5_cpp_algorithmic_life/: CMakeLists.txt  koan.cpp
docker/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  requirements_pip.txt  run.sh
docker/files/: DOTaliases  fixuid_config.yml
